--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google-cloud/speech": "^7.0.1",
     "@google-cloud/storage": "^7.16.0",
     "@google/generative-ai": "^0.24.0",
     "@tailwindcss/vite": "^4.1.3",
     "cors": "^2.8.5",
     "css": "^3.0.0",
     "dotenv": "^16.4.7",
+    "express": "^5.1.0",
     "multer": "^1.4.5-lts.2",
     "react": "^19.0.0",
     "react-dom": "^19.1.0",
