--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css": "^3.0.0",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "mongodb": "^6.15.0",
     "multer": "^1.4.5-lts.2",
     "react": "^19.0.0",
     "react-dom": "^19.1.0",
