--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server.js",
+    "start-stt": "node start-stt-server.js",
+    "start-all": "concurrently \"node start-stt-server.js\" \"node server.js\""
   },
   "dependencies": {
     "@google-cloud/speech": "^7.0.1",
@@ -22,6 +25,9 @@
     "multer": "^1.4.5-lts.2",
     "react": "^19.0.0",
     "react-dom": "^19.1.0",
+    "reconnecting-websocket": "^4.4.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwind": "^2.3.1"
   },
   "devDependencies": {
@@ -29,6 +35,7 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "concurrently": "^9.1.2",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
